fixed css issues like margins and tabs being too wide

--- a/sidebar.css
+++ b/sidebar.css
@@ -6,44 +6,21 @@ body {
 	background-color: #444444;
 	/*border-left:2pt solid black;*/
 }
-.tab:hover { background-color: #d0d0d0; }
-.tab.active { background-color: #a0a0d0; }
+.tabMargin { background-color: #e0e0e0; }
+.tabContent>*{ display: inline-block; }
+.tab:hover>div{ background-color: #d0d0d0; }
+.tab.active>div{ background-color: #a0a0d0; }
 .tab {
+	overflow: hidden;
+	white-space: nowrap;
 	width: 100%;
-	/*height: 16px;*/ /*tab 16 px high at the moment*/
+	height: 16px;
+	position: relative; /*needed for position absolute in #drag*/
 	table-layout: fixed;
 	border-collapse: collapse;
-	background-color: #e0e0e0;
-	/*border-top:1pt solid black;*/
-	/*border-left:1pt solid black;*/
-}
-.tab.moveToTop {
-	border-top:3px solid black;
-}
-.tab.moveToCenter {
-	border:2px solid black;
-}
-.tab.moveToBottom {
-	border-bottom:3px solid black;
-}
-.tab * {
-	margin: 0 0 0 0;
-	border: 0 0 0 0;
-	padding: 0 0 0 0;
-}
-.title {
-	white-space: nowrap;
-	overflow: hidden;
-	height: 1em;
-	vertical-align: top;
 }
 .expand { width: 13px; }
 .favicon { width: 22px; }
-/*.close {
-	position: absolute;
-	right: 0px;
-	width: 19px;
-}*/
 img {
 	height: 16px;
 	vertical-align: bottom;
@@ -74,9 +51,6 @@ img {
 
 
 
-table {
-	position: relative;
-}
 #drag {
 	position: absolute;
 	top: 0px;
@@ -101,44 +75,8 @@ table {
 
 
 
-
-
-
-
-
-/*body {
-	height: 100%;
-	background-color: #aaaaaa;
-}
-
-.tab {
-	position: relative;
-	overflow: hidden;
-	white-space: nowrap;
-	padding-left: 3px;
-	padding-right: 80px;
-	background-color: #efefef;
-	border-bottom:1pt solid black;
-}
-.tab * {
-	position: absolute;
-}
-.title {
-	display: inline-block;
-	vertical-align: top;
-}
-.favicon {
-	height: 16px;
-	width: 16px;
-}
-.close {
+/*.close {
 	position: absolute;
 	right: 0px;
-	float: right;
-}
-img {
-	vertical-align: middle;
+	width: 19px;
 }*/
-
-
-
